Address Claude review for Micronaut backend
Co-Authored-By: Claude <noreply@anthropic.com>