@@ -14,7 +14,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.net.URI;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
@@ -22,9 +21,9 @@ import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
 
 @Singleton
 final class JwtVerifier {
@@ -36,9 +35,10 @@ final class JwtVerifier {
     private final String audience;
     private final ObjectMapper mapper;
     private final HttpClient client = HttpClient.newBuilder().connectTimeout(Duration.ofSeconds(10)).build();
-    private final Map<String, RSAKey> keys = new ConcurrentHashMap<>();
-    private Instant lastRefresh = Instant.EPOCH;
-    private String resolvedJwksUri;
+    private final Object refreshLock = new Object();
+    private volatile Map<String, RSAKey> keys = Map.of();
+    private volatile Instant lastRefresh = Instant.EPOCH;
+    private volatile String resolvedJwksUri;
 
     JwtVerifier(
             @Value("${stackverse.oidc.issuer-uri}") String issuer,
@@ -97,7 +97,9 @@ final class JwtVerifier {
             List<String> result = new ArrayList<>();
             for (Object role : list) {
                 if (role instanceof String value) {
-                    result.add(value);
+                    if ("moderator".equals(value) || "admin".equals(value)) {
+                        result.add(value);
+                    }
                 }
             }
             return result;
@@ -106,17 +108,22 @@ final class JwtVerifier {
         }
     }
 
-    private synchronized RSAKey key(String kid) throws Exception {
+    private RSAKey key(String kid) throws Exception {
         if (kid == null || kid.isBlank()) {
             throw new IllegalArgumentException("missing signing key id");
         }
-        if (kid != null && keys.containsKey(kid)) {
-            return keys.get(kid);
+        RSAKey existing = keys.get(kid);
+        if (existing != null) {
+            return existing;
         }
         if (Duration.between(lastRefresh, Instant.now()).compareTo(REFRESH_COOLDOWN) < 0) {
             throw new IllegalArgumentException("unknown signing key");
         }
-        refresh();
+        Map<String, RSAKey> refreshed = fetchKeys();
+        synchronized (refreshLock) {
+            keys = Map.copyOf(refreshed);
+            lastRefresh = Instant.now();
+        }
         RSAKey key = keys.get(kid);
         if (key == null) {
             throw new IllegalArgumentException("unknown signing key");
@@ -124,19 +131,30 @@ final class JwtVerifier {
         return key;
     }
 
-    private void refresh() throws Exception {
-        lastRefresh = Instant.now();
+    private Map<String, RSAKey> fetchKeys() throws Exception {
         String uri = jwksUri();
         long started = System.nanoTime();
         try {
-            JWKSet set = JWKSet.load(new URL(uri));
-            keys.clear();
-            for (RSAKey key : set.getKeys().stream().filter(jwk -> jwk instanceof RSAKey).map(jwk -> (RSAKey) jwk).toList()) {
-                keys.put(key.getKeyID(), key);
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(uri))
+                    .timeout(Duration.ofSeconds(10))
+                    .GET()
+                    .build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            if (response.statusCode() != 200) {
+                throw new IllegalStateException("JWKS endpoint returned " + response.statusCode());
             }
-            if (keys.isEmpty()) {
+            JWKSet set = JWKSet.parse(response.body());
+            Map<String, RSAKey> refreshed = new HashMap<>();
+            for (RSAKey key : set.getKeys().stream().filter(jwk -> jwk instanceof RSAKey).map(jwk -> (RSAKey) jwk).toList()) {
+                if (key.getKeyID() != null && !key.getKeyID().isBlank()) {
+                    refreshed.put(key.getKeyID(), key);
+                }
+            }
+            if (refreshed.isEmpty()) {
                 throw new IllegalStateException("JWKS contains no RSA signing keys");
             }
+            return refreshed;
         } catch (Exception ex) {
             EventLog.warn(LOG, "dependency_call_failed", "failure", "Fetching JWKS failed",
                     Map.of("dependency", "keycloak", "duration_ms", (System.nanoTime() - started) / 1_000_000,
